cmake_minimum_required(VERSION 3.22)

project(dart-tutorials)

add_subdirectory(tutorial_biped)
add_subdirectory(tutorial_biped_finished)
add_subdirectory(tutorial_collisions)
add_subdirectory(tutorial_collisions_finished)
add_subdirectory(tutorial_dominoes)
add_subdirectory(tutorial_dominoes_finished)
add_subdirectory(tutorial_multi_pendulum)
add_subdirectory(tutorial_multi_pendulum_finished)
